GNOME Bugzilla – Bug 673458
GdkEventButton contains wrong buttons in modifier mask for button releases
Last modified: 2012-04-07 00:28:27 UTC
Created attachment 211250 [details] Small program to reproduce the bug While debugging an issue with spice-gtk I eventually found out that gdk3 is reporting a wrong modifier mask for button release events for buttons > 1. The problem is that the modifier mask always contains the GDK_BUTTON1_MASK for release events even if button1 was not pressed at the time of the release. I've seen this with a fully up2date Fedora-17 on 2 different machines. Attached it a simply reproducer, running this and then pressing buttons 1 - 3 in succession (releasing each one before pressing the next) gives the following output: press, button 1, mask 0x0000 release, button 1, mask 0x0100 press, button 2, mask 0x0000 release, button 2, mask 0x0300 press, button 3, mask 0x0000 release, button 3, mask 0x0500
The following fix has been pushed: 2ef4b93 Don't force BUTTON1_MASK on non-touch events
Created attachment 211519 [details] [review] Don't force BUTTON1_MASK on non-touch events This problem was pointed out by Hans de Goede in