Don't force BUTTON1_MASK on non-touch events

This problem was pointed out by Hans de Goede in
https://bugzilla.gnome.org/show_bug.cgi?id=673458